# JustToDo

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
discuss/: 2026-07-21-task-templates-design.md  2026-07-21-task-templates-plan.md  calendar-views.md  notion-like-editor.md  tasklist-item-drag.md
scripts/: build-debug.sh  dev.sh  generate-icons.sh  install-deps.sh
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  menu.rs  models.rs
src-tauri/src/db/: mod.rs
src-tauri/src/db/migrations/: 001_init.sql  002_habits.sql  003_due_range.sql  014_templates.sql  015_templates_date_cn.sql  016_templates_placeholders.sql
src/api/: db.ts
src/components/: AddTaskBar.vue  AppRail.vue  BlockDragHandle.vue  CalendarToolbar.vue  DatePopover.vue  DueDateChip.vue  ListDragHandle.vue  MenuPopover.vue  MenuPopoverItem.vue  MiniCalendar.vue  Popover.vue  PriorityDot.vue  PropertyChip.vue  QuickAddDialog.vue  RecurrencePopover.vue  ReminderPopover.vue  RichTextEditor.vue  RichTextFloatingMenu.vue  RichTextToolbar.vue  SearchPalette.vue  SelectPopover.vue  SidebarListNode.vue  SlashCommandMenu.vue  TaskCheckbox.vue  TaskDetailPanel.vue  TaskListItem.vue  TeleportPopper.vue  TemplateCard.vue  TemplateEditModal.vue  TemplateRenameModal.vue  TemplateSection.vue  TheSidebar.vue
src/composables/: useBlockDrag.ts  useCalendarView.ts  useListDrag.ts  useQuickAdd.ts  useShortcuts.ts  useTheme.ts
(+26 files in other folders)
