[package]
name = "justtodo"
version = "0.1.0"
description = "A local-first todo / task management desktop app"
authors = ["JustToDo"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "justtodo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "unstable"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = "2"

# 直接 SQLite 访问（绕过 plugin-sql 前端 API 的 IPC 问题）
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }

# MCP 插件（仅用于 dev 模式下的 AI 测试，通过 #[cfg(dev)] 条件编译控制）
tauri-plugin-mcp = { git = "https://github.com/P3GLEG/tauri-plugin-mcp" }
tauri-plugin-dialog = "2.7.1"

